syntax = "proto3";

message DataBatchLabeled {
  bytes data = 1;
  repeated int32 labels = 2;
  int32 batch_index = 3;
  bool is_last_batch = 4;
}